--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nativescript-sqlite": "^1.1.11",
+    "nativescript-pro-ui": "^3.2.0",
     "nativescript-theme-core": "~1.0.2",
     "tns-core-modules": "^3.3.0"
   },
