--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "id": "org.nativescript.mHealth",
     "tns-ios": {
       "version": "3.2.0"
+    },
+    "tns-android": {
+      "version": "3.3.1"
     }
   },
   "dependencies": {
-    "nativescript-sqlite": "^1.1.11",
     "nativescript-pro-ui": "^3.2.0",
+    "nativescript-sqlite": "^1.1.11",
     "nativescript-theme-core": "~1.0.2",
     "tns-core-modules": "^3.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
+    "lazy": "1.0.11"
+  },
   "author": "Aleksander Nygård Tonheim"
 }
