--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   },
   "dependencies": {
+    "nativescript-local-notifications": "^2.0.1",
     "nativescript-pro-ui": "^3.2.0",
     "nativescript-sqlite": "^1.1.11",
     "nativescript-theme-core": "~1.0.2",
