Update of the Nativescript CLI

--- a/app/App_Resources/Android/settings.gradle
+++ b/app/App_Resources/Android/settings.gradle
@@ -3,7 +3,7 @@ import groovy.json.JsonSlurper
 task replaceSettings {
     description "Replaces configuration settings."
     def jsonSlurper = new JsonSlurper();
-    def pathToSettingsJson = "$projectDir/../../app/App_Resources/Android/settings.json";
+    def pathToSettingsJson = "$rootDir/../../app/App_Resources/Android/settings.json";
     def settingsJsonFile = file(pathToSettingsJson);
     def settingsResolvedPath = settingsJsonFile.getAbsolutePath();
 
@@ -38,7 +38,7 @@ task replaceSettings {
             settingsGradleTemplate = settingsGradleTemplate.replaceAll( placeholder, settingValue as String);
         }
 
-        new File( './temp_setting.gradle' ).write( settingsGradleTemplate, 'UTF-8');
-        apply from: './temp_setting.gradle';
+        new File( "$rootDir/temp_setting.gradle" ).write( settingsGradleTemplate, 'UTF-8');
+        apply from: "$rootDir/temp_setting.gradle";
     }
 }
