--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.mHealth",
     "tns-ios": {
-      "version": "5.1.0"
+      "version": "5.2.0-2019-01-14-022317-01"
     }
   },
   "dependencies": {
@@ -15,7 +15,7 @@
     "nativescript-pro-ui": "^3.2.0",
     "nativescript-sqlite": "^1.1.11",
     "nativescript-theme-core": "~1.0.2",
-    "tns-core-modules": "^5.2.0-next-2019-01-02-113109-01"
+    "tns-core-modules": "^5.2.1-next-2019-01-10-145030-01"
   },
   "devDependencies": {
     "babel-traverse": "6.26.0",
